<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp">

    <EditText
        android:hint="@string/search_meal_by_name"
        android:background="@drawable/search_background"
        android:padding="15dp"
        android:id="@+id/search_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/arrow_search_img" />

    <ImageView
        android:id="@+id/arrow_search_img"
        android:layout_gravity="center"
        android:padding="15dp"
        android:src="@drawable/baseline_start_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/start_searching" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="5dp"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:contentDescription="@string/find_meal_by_name"
        app:layout_constraintTop_toBottomOf="@id/search_line"
        tools:itemCount="2"
        tools:listitem="@layout/item_view" />

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/empty_list_of_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results_found"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>