<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:id="@+id/holder_root">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/dish_serving_example_description"
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="5dp"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="Name of the meal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_category"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:text="@string/category_description"
                        android:layout_weight="1"/>


                    <TextView
                        android:id="@+id/text_category_value"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        tools:text="Category"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_area"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:text="@string/area_description"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/text_area_value"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        tools:text="Area"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>